<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment"
    android:outlineProvider="background"
    android:background="@color/white"
    >

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="135dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/round_corner"
        android:contentDescription="@string/todo"
        android:src="@drawable/kibaki"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/walid_saidi"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Walid.saidi@strathmore.edu"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RelativeLayout

        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginStart="28dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.179">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/textInputLayout3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/phone_number">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="185dp"
                android:inputType="none"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:text="@string/number"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="17dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginEnd="12dp"
            android:hint="Location"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:inputType="none"
                android:paddingStart="15dp"
                android:textColor="@color/black"
                android:text="Nairobi" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/textInputLayout2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/gender"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:inputType="none"
                android:textColor="@color/black"
                android:paddingStart="15dp"
                android:text="@string/gender2"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="116dp"
            android:layout_height="53dp"
            android:layout_below="@+id/textInputLayout4"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="82dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="27dp"
            android:text="Log Out" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="171dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="My Profile:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />


</androidx.constraintlayout.widget.ConstraintLayout>